# naive-midi

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  common.h  list.c  list.h  list_qsort.c  list_qsort.h  midiparser.c  midiparser.h  module.c  module.h  naive-midi-player.c  player.c  player.h  player_engine.c  player_engine.h  streambuf.c  streambuf.h  temperament.c  temperament.h  temperament_dom_bedos.c  temperament_dom_bedos.h  temperament_equal.c  temperament_equal.h
src/buzzer/: Makefile.am  buzzer.c  buzzer.h  buzzer_module.c  buzzer_module.h  buzzer_pool.c  buzzer_pool.h
src/sampler/: Makefile.am  codec_wav.c  codec_wav.h  endianness.h  instrument.c  instrument.h  pcmbuf.c  pcmbuf.h  sampler.c  sampler.h  sampler_event.c  sampler_event.h  sampler_module.c  sampler_module.h
